[demo] Change output wrapper overflow to `auto` to prevent scrollbars for small output.

--- a/src/demo/style.css
+++ b/src/demo/style.css
@@ -44,7 +44,7 @@ body > a {
 }
 
 .output-wrapper {
-  overflow: scroll;
+  overflow: auto;
 }
 
 textarea {
